<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <LinearLayout
       android:id="@+id/reviewlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/textHotelName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           
            android:visibility="visible" />

        <TextView
            android:id="@+id/hotelName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="15dp"
            android:text="Big Bite"
            android:textColor="@color/hotel_blue"
            android:textSize="30sp"
            android:visibility="gone" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginTop="15dp"
            android:src="@drawable/center_line" />

        <TextView
            android:id="@+id/textLogedInAs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text=""
            android:textColor="@color/hotel_blue"
            android:textSize="20sp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/txtLogedInAs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/hotel_blue"
                    android:textSize="20sp"
                    android:visibility="gone" />
                <!-- <TextView android:text=""

                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:src="@drawable/sign_fb"
                    android:visibility="visible"/> -->
                
                <!-- <com.facebook.login.widget.LoginButton
                   android:id="@+id/login_button"
                   android:layout_width="fill_parent"
                   android:layout_height="match_parent"
                   android:layout_centerInParent="true" 
                   android:visibility="gone"/> -->

               <!--  <ImageButton
                    android:id="@+id/btnLoginUs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:layout_marginTop="20dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/sign_email" 
                    android:visibility="gone"/>  -->
                <TextView 
                    android:id="@+id/btnlog"
                    
                   
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:layout_marginBottom="15dp"
                    android:text="@string/searchlogin"
                    android:textColor="@color/hotel_blue"
                    android:textSize="15sp"
                    />
                
                <EditText
                android:id="@+id/txtloginMobile"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginBottom="10dp"
                android:background="@color/edittext_background"
                android:ems="10"
                android:hint=""
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLength="10"
                android:nextFocusRight="@+id/txtSecondName"
                android:paddingLeft="10dp"
                android:paddingRight="5dp"
                android:singleLine="true"
                android:text=""
                android:textColor="@color/address_text_color"
                android:textColorHint="@color/address_text_color"
                android:textSize="15sp" />
                
                
              <ImageButton
            android:id="@+id/buttonforlogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/ic_proceed" />
                
                
            </LinearLayout>

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/search_restaurant"
                android:textColor="@color/hotel_blue"
                android:textSize="20sp"
                android:visibility="gone" />

            <EditText
                android:id="@+id/txtCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/text_field"
                android:ems="10"
                android:hint="@string/enteryourcity"
                android:inputType="text"
                android:padding="10dp"
                android:visibility="gone" >
            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/or"
                android:textSize="30sp"
                android:visibility="gone" />

            <EditText
                android:id="@+id/txtZip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/text_field"
                android:ems="10"
                android:hint="@string/enterzip"
                android:inputType="number"
                android:padding="10dp"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/imgDashOr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:src="@drawable/deshed_line" />
              <ImageButton
                    android:id="@+id/btnLogin"
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:layout_marginBottom="10dp"
                    android:src="@drawable/sign_fb"
                    android:visibility="visible" />
                <ImageButton
                    android:id="@+id/btnLoginSkip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@android:color/transparent"
                    android:padding="5dp"
                    android:src="@drawable/skip_text" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutReservation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="50dp" >
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/layoutPowerdby"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageButton
            android:id="@+id/buttonSkip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_proceed" />
         

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Proceed"
            android:textColor="@color/hotel_blue"
            android:textSize="18sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="Powered By"
            android:textColor="@color/hotel_blue"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:src="@drawable/ic_cravrr_logo" />
    </LinearLayout>

</LinearLayout>